# hanami-wasm-search

./: .gitignore  Cargo.toml  LICENSE  README.md  artifact.tgz  benchmark.js  build.sh  package.json  pnpm-lock.yaml  run_benchmark.sh  run_tests.sh  test.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
crate/: Cargo.toml
crate/src/: cache.rs  lib.rs  search.rs
examples/emoji-search/: emojiIndex.js  index.html  main.js  style.css  worker.js
package/: package.json
pkg/: README.md  hanami_wasm_search.d.ts  hanami_wasm_search.js  hanami_wasm_search_bg.js  hanami_wasm_search_bg.wasm  hanami_wasm_search_bg.wasm.d.ts  package.json
scripts/: benchmark.js  build-wasm.js
src/: index.ts  lib.rs  vite-env.d.ts
src/types/: overrides.d.ts
test/: index.test.ts
