[package]
name = "hanami_wasm_search"
version = "0.1.0"
edition = "2024"
description = "Lightweight search engine using WebAssembly for Japanese emoji search"
license = "MIT"
repository = "https://github.com/HanaMisskey/wasm-search"
keywords = ["search", "wasm", "japanese", "emoji"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
bincode = "1"
js-sys = "0.3"
wana_kana = "4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
